--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,12 @@
-Faker==0.7.4
+Faker==7.0.0
+greenlet==3.2.1
 numpy==2.2.5
 pandas==2.2.3
+pyarrow==20.0.0
 python-dateutil==2.9.0.post0
 pytz==2025.2
 six==1.17.0
+SQLAlchemy==2.0.40
+text-unidecode==1.3
+typing_extensions==4.13.2
 tzdata==2025.2
